Creating list HTML and CSS

--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -18,11 +18,13 @@
 	<h3 class="tagline">September 38-40th | Texas, TX</h3>
 
   <nav class="nav primary-nav">
-    <a href="index.html">Home</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="venue.html">Venue</a>
-    <a href="register.html">Register</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="speakers.html">Speakers</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="venue.html">Venue</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
   </nav>
   </header>
 
@@ -44,7 +46,7 @@
     <h5>Speakers</h5>
     <h3>World-Class Speakers</h3>
     </a>
-    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+    <p>Joining us from all around the world are over ZERO fantastic speakers, here to share their stories.</p>
 
     </section>
    
@@ -72,13 +74,15 @@
     <footer class="primary-footer container group">
         <small>&copy; Woke Conference</small>
          
-          <nav class="nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
-          </nav>
+        <nav class="nav">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+              <li><a href="speakers.html">Speakers</a></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li><a href="venue.html">Venue</a></li>
+              <li><a href="register.html">Register</a></li>
+          </ul>
+        </nav>
 
     </footer>
 
