--- a/styles_conference/speakers.html
+++ b/styles_conference/speakers.html
@@ -21,13 +21,15 @@
       <h3 class="tagline">September 38-40th | Texas, TX</h3>
 
       <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="speakers.html">Speakers</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="venue.html">Venue</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
-
+   
     </header>
 
     <!-- Lead -->
@@ -42,6 +44,66 @@
       </div>
     </section>
 
+    <!-- Main Content -->
+    
+    <section class="row">
+      <div class="grid">
+        <!--Tragic Drump Jr.-->
+        <section class="speaker" id="tragic drump jr.">
+            <div class="col-2-3">
+              <h2>Tragic Drump Jr.</h2>
+              <h5>Intelligence is overrated</h5>
+              <p>As a matter of fact, we should get rid of common sense as well! The world is tough out there for us with average IQ of below 50. For banning books and cirrculum, we can design a society where the dumbests are leading the rest of dummies.</p>
+
+              <p>In Tragic Drump's session, he will explore how to be recognized as someone with no sign of intelligence. He will share how to showcase those traits at such a high level that not even his father can imagine.</p>
+
+              <h5>About Tragic</h5>
+
+              <p>Tragic Drump's fame came from his father's scamming business. With absolutely no qualification, Tragic showed that's what we need to be in today's politics.</p>
+
+            </div>
+            <aside class="col-1-3">
+              <div class="speaker-info">
+
+                <ul>
+                   <li><a href="https://twitter.com/tragicdrumpjr">@tragicdrumpjr</a></li>
+                   <li><a href="http:??www.whatisintelligence.com"><wedonthaveIQ.com></a></li>
+                </ul>
+              </div>
+        </section>
+      </div>
+    </aside>
+       <!--Turtle Stitch-->
+    <section class="speaker" id="turtle-stitch">
+
+      <div class="col-2-3">
+
+        <h2>Turtle Stitch</h2>
+        <h5>Living over 150 years-old by mastering the art of bad lying.</h5>
+
+        <p>Thriving in lying to straight to people that believed in him, Turtle secured his spot by constantly blaming other people while waiting for their aids. </p>
+
+        <h5>About Turtle</h5>
+
+        <p>Turtle Stitch has been in the serving in our congress for over two centuries, earing his professional name, Turtle.<a href="http://welieandwehide.com/">lyingnhiding.com</a> and <a href="https://www.welieandwehide.com/">turtlestitch.com</a>.</p>
+
+      </div><!--
+
+      --><aside class="col-1-3">
+        <div class="speaker-info">
+
+          <ul>
+            <li><a href="https://twitter.com/turtleliar">@turtleliar</a></li>
+            <li><a href="http://welieandwehide.com/">lyingnhiding.com</a></li>
+          </ul>
+
+        </div>
+      </aside>
+
+    </section>
+
+    </section>
+   
     <!-- Footer -->
 
     <footer class="primary-footer container group">
@@ -49,11 +111,13 @@
       <small>&copy; Woke Conference</small>
 
       <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
 
     </footer>
